--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-fast-marquee": "^1.5.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
-    "react-image-zoom": "^1.3.1",
+    "react-image-magnify": "^2.7.4",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
